--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  #  pdrpulm: ^1.0.2
+
+  #  liquid_pull_to_refresh: ^1.1.1
   http: any
   flutter:
     sdk: flutter
@@ -57,10 +60,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+  - family: MyFlutterApp
+    fonts:
+    - asset: fonts/MyFlutterApp.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
