--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: connecting
 description: A new Flutter application.
-
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -17,18 +16,31 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  #  pdrpulm: ^1.0.2
-
-  #  liquid_pull_to_refresh: ^1.1.1
   http: any
+  redux: any
+  flutter_redux: any
+  rxdart: any
+
+  tuple: any
+  latlong: any
+  positioned_tap_detector: any
+  transparent_image: any
+  async: any
+  flutter_image: any
+  cached_network_image: any
+  sqflite: any
+  path_provider: any
+
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+#  cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  pedantic: any
   flutter_test:
     sdk: flutter
 
